fix: normalize GPS output for frontend